--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       <div class="loading-text">
         Loading
       </div>
-      <img src="assets/brazil.svg" class="logo" alt="Logo">
+      <img src="assets/logo.png" class="logo" alt="Logo">
     </div>
   </app-root>
 </body>
